feat: added venue list with filtering features
